methods.picture.PictureMono1.scala.error
Compilation error:
PictureMono1:19: error: ';' expected but '=' found.
    (xx,yy) = arr[i];
            ^